# csfrace-scrape-back

./: .codecov.yml  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  .releaserc.json  .secrets.baseline  .trivyignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  all_tests.txt  bandit-report.sarif  benchmark.json  codecov.yml  dependency-audit.json  docker-compose.monitoring.yml  docker-compose.tracing.yml  docker-compose.yml  fix_webauthn_router_tests.py  main.py  mypy.ini  otel-collector-config.yaml  pip-audit-final.json  pip-audit-report-fixed.json  pip-audit-report.json  playwright.config.py  plugins.json  prometheus.yml  pyproject.toml  pytest.ini  requirements.txt  test.db
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  trigger-umbrella-update.yml
alembic/: env.py
alembic/versions/: 2025_08_27_0123-c03c3cb97656_initial_database_schema.py  2025_08_27_0141-5131d00ba2c5_initial_database_schema_with_enum_types.py  2025_08_27_0143-ea6fb7cb28b0_add_start_time_and_end_time_fields.py  2025_09_03_2324-6a017959a425_create_database_enums_for_job_management.py
batch_output/: batch_summary.json
benchmarks/: data.js
data/: scraper.db
docker/postgres/conf/: postgresql.conf
docker/postgres/init/: 01-init-database.sql
docs/: DISTRIBUTED_TRACING.md
docs/examples/: tracing_integration_example.py
examples/: redis_cache_example.py
requirements/: base.txt  dev.txt  optional.txt  prod.txt  test.txt
scripts/: lint-like-superlinter.sh  update_version.py
src/: __init__.py  constants.py  main.py
src/api/: __init__.py  crud.py  dependencies.py  main.py  schemas.py  utils.py
src/api/middleware/: __init__.py  tracing.py
src/api/routers/: batches.py  health.py  jobs.py
src/auth/: __init__.py  config.py  dependencies.py  models.py  oauth_service.py  router.py  security.py  service.py  webauthn_service.py
src/batch/: __init__.py  enhanced_processor.py  monitoring.py  processor.py  queue_manager.py  recovery.py
src/caching/: __init__.py  base.py  file_cache.py  manager.py  redis_cache.py
src/cli/: __init__.py  grafana_cli.py
src/config/: __init__.py  loader.py  rate_limits.py
src/core/: __init__.py  config.py  converter.py  exceptions.py  plugin_integration.py
src/database/: __init__.py  base.py  init_db.py  migrations.py  models.py  service.py
src/monitoring/: __init__.py  alerts.py  dashboard_provisioner.py  grafana.py  health.py  metrics.py  observability.py  performance.py  tracing.py
src/plugins/: __init__.py  base.py  manager.py  registry.py
src/plugins/examples/: __init__.py  font_cleanup_plugin.py  seo_metadata_plugin.py
src/processors/: __init__.py  html_processor.py  image_downloader.py  metadata_extractor.py
src/rendering/: __init__.py  browser.py  detector.py  renderer.py
src/security/: sanitization.py
src/utils/: __init__.py  html.py  http.py  logging.py  path_utils.py  retry.py  robots.py  session_manager.py  tracing_utils.py  url.py
tests/: __init__.py  conftest.py  conftest_api.py  conftest_playwright.py  conftest_testcontainers.py  test_main.py  test_property_based.py
tests/api/: conftest.py  test_batches.py  test_health.py  test_integration.py  test_jobs.py  test_rate_limiting.py
tests/batch/: test_enhanced_processor.py  test_monitoring.py  test_processor.py  test_queue_manager.py  test_recovery.py
tests/caching/: test_file_cache.py  test_manager.py  test_redis_cache.py
tests/cli/: test_grafana_cli.py
tests/config/: test_loader.py
tests/core/: test_converter.py  test_plugin_integration.py
tests/database/: __init__.py  test_base.py  test_init_db.py  test_migrations.py  test_models.py  test_service.py  test_service_comprehensive.py  test_service_extended.py
tests/integration/: test_converter_integration.py  test_error_scenarios.py  test_grafana_integration.py  test_priority2_integration.py  test_redis_advanced.py  test_redis_cache.py  test_rendering_integration.py
tests/integration/auth/: test_oauth_router.py
tests/monitoring/: __init__.py  test_alerts.py  test_dashboard_provisioner.py  test_grafana.py  test_health.py  test_metrics.py  test_observability.py  test_performance.py  test_tracing.py
tests/performance/: __init__.py  test_benchmarks.py  test_caching_performance.py  test_html_processing_performance.py  test_rendering_benchmarks.py  test_rendering_performance.py
tests/plugins/: test_manager.py  test_plugins.py  test_registry.py
tests/plugins/examples/: __init__.py  test_font_cleanup_plugin.py  test_seo_metadata_plugin.py
tests/processors/: test_html_processor.py  test_image_downloader.py  test_metadata_extractor.py
tests/rendering/: test_browser.py  test_browser_OLD_ASYNCMOCK.py  test_detector.py  test_edge_cases.py  test_error_handling.py  test_error_handling_OLD_ASYNCMOCK.py  test_renderer.py  test_security.py
tests/unit/: __init__.py  test_api_crud.py  test_api_dependencies.py  test_api_main.py  test_api_routers_batches.py  test_api_routers_health.py  test_api_routers_jobs.py  test_batch_processor.py  test_caching.py  test_comprehensive_coverage.py  test_config_loader.py  test_constants.py  test_core_modules.py  test_html_processor.py  test_html_processor_xss.py  test_html_sanitization.py  test_metadata_extractor.py  test_plugins.py  test_property_based.py  test_rendering_browser.py  test_rendering_detector.py  test_rendering_renderer.py  test_robots.py
tests/unit/auth/: test_oauth_models.py  test_oauth_service.py  test_webauthn_models.py  test_webauthn_router.py  test_webauthn_service.py
tests/utils/: __init__.py  test_data_factory.py  test_helpers.py  test_html.py  test_http.py  test_retry.py  test_session_manager.py
